apps/media-stack/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  parentRefs:
    - kind: Gateway
      name: cilium
      namespace: gateway
      sectionName: https
  hostnames:
    - "radarr.lab.<YOUR_DOMAIN>"
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: radarr
          port: 7878
